--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,21 @@
 </head>
 <body>
 
+<header>
+    <nav>
+        <% if author_signed_in? %><%#walsからコピペ、authorに変更%>
+            <strong><%= link_to current_author.email,edit_author_registration_path %></strong>
+            <%= link_to 'プロフィール変更', edit_author_registration_path %>
+            <%= link_to 'ログアウト', destroy_author_session_path, method: :delete %>
+        <% else %>
+            <%= link_to 'サインアップ', new_author_registration_path %>
+            <%= link_to 'ログイン', new_author_session_path %>
+        <% end %>
+    </nav>
+</header>
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
+
 <%= yield %>
 
 </body>
