--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -11,19 +11,25 @@
     </tr>
   </thead>
 
-  <tbody>
+    <tbody>
     <% @articles.each do |article| %>
       <tr>
         <td><%= article.title %></td>
         <td><%= article.body %></td>
         <td><%= link_to 'Show', article %></td>
+        <% if author_signed_in? %><%#if で条件分岐%>
         <td><%= link_to 'Edit', edit_article_path(article) %></td>
         <td><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% else %><%#変更%>
+        <td></td>
+        <td></td>
+        <% end -%><%#変更%>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
+<% if author_signed_in? %><%#変更%>
 <%= link_to 'New Article', new_article_path %>
+<% end -%><%#変更%>
