--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
 <body>
 
@@ -37,6 +38,11 @@
 <p class="alert"><%= alert %></p>
 
 <%= yield %>
+
+<div id="footer">
+  <div class="footer-left">Straw</div>
+  <div class="footer-right">© Straw All Right Reserved</div>
+</div>
 
 </body>
 </html>
