--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -32,6 +32,9 @@ a{
  .header-left{
  	height: 100%;
  	width: 120px;
+ 	font-family: monotype corsiva;
+ 	font-size: 30px;
+ 	text-align: center;
  	color: white;
  	line-height: 70px;
  	float: left;
@@ -50,3 +53,35 @@ a{
  	line-height: 70px;
  	display: inline-block;
  }
+
+ .header-right a{
+ 	color: white;
+ }
+
+ #footer{
+ 	display: none;
+ 	height: 250px;
+ 	width: 100%;
+ 	background-color:#8b4513; 
+ }
+
+ .footer-left{
+ 	height: 100%;
+ 	width: 500px;
+ 	border-right: solid 1px silver;
+ 	color: white;
+ 	font-size: 30px;
+ 	font-family: monotype corsiva;
+ 	float: left;
+ 	line-height: 250px;
+ 	text-align: center;
+ }
+
+ .footer-right{
+ 	height: 100%;
+ 	width: 400px;
+ 	color: white;
+ 	float: right;
+ 	line-height: 250px;
+ 	text-align: center;
+ } 
