--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.top{
+	height: 500px;
+	width: 100%;
+}
+
+.top h1{
+	margin-top: 100px;
+	text-align: center;
+}
+
+.top p{
+	margin-top: 150px;
+	font-size: 35px;
+	text-align: center;
+}
